--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,10 @@ svg {
     color: #999;
 }
 h2 {
-  font-family: 'Merriweather', 'Georgia', 'serif';
+  font-family: 'Merriweather', serif;
   font-weight: 700;
   padding-top: 20px;
+  font-style: italic;
 }
 p {
   margin: 0px;
